# python_logger_core_sample

./: .gitignore  Makefile  README.md  logging_config.yml  pyproject.toml  setup.py
coala/logger/: cs_logger.py  filter.py  trace.py
cs/core/: logging_config.yml
cs/core/logger/: __init__.py  cs_logger.py  cslog.py  handler.py  output.py  test.py  trace.py
cs/core/utils/: config.py
masakaya/: __init__.py  sample1.py
python-logger-core-sample/cs/core/logger/: test.py
sample/: cs_logger.py  cslog.py  output.py
screenshot/: README.md
tests/coala/logger/: test_cs_logger.py  test_trace.py
tests/cs/core/logger/: logging_config.yml.sample  test_cs_logger.py  test_trace.py
