[tool.poetry]
name = "python_logger_core_sample"
version = "0.1.21"
description = ""
authors = ["Masashi.Kayahara <masashi.kayahara@arc-connects.com>"]

packages = [
    { include = "cs" },
]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
google-cloud-logging = "^3.2.2"
python-json-logger = "^2.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
